5.2.0
---------
- Now supports encrypting/decrypting your swap partition
- No longer supports multiple individual encryption passphrases. The application will use the one passphrase
  you provided to automatically decrypt all your drives, or it will use your keyfile to automatically decrypt
  them all.
- You are now able to refresh the "available drives" list when the "redetect" flag is set
- The application will now ask you for the enc_type if you didn't explictly declare it
- The initramfs will no longer set the hostid value. It will default to the patched upstream ZoL code (all zeroes)

5.1.0
---------
- All support not relating to ZFS or a Normal boot has been removed. There are better
  initramfs applications out there for those use cases (LVM, LVM on RAID, etc)
- Added a commented "dm-crypt" to the addons.py to facilitate the user to enable encryption
  support (when their encryption support is compiled as a module)
  rather than built into the kernel). 
- Improved comments in some places

5.0.0
---------
- The application has been refactored. Smaller, faster, and cleaner.
- The application has been relicensed back to the Mozilla Public License 2.0.
- Improved error checking
- Improved program flow
- Improved parameter passing
- Improved dependency detection
- Visual improvements, including the removal of unneeded messages
- Supports passing the init to launch with the "init" flag. Example: init=/sbin/blahblah

4.1.2
---------
- Relicensed to the more permissive, Apache License 2.0
- Changed interpreter from '#/usr/bin/env python' to '#/usr/bin/python3'.
  This is a symlink to the system's python 3.X interpreter. Thus even if the user has python 2.X
  set in 'eselect python list', the program will still work.

4.1.1
---------
- The application will now use the zpool.cache file that's on the system
  at the time of creation if it finds one.
- The hostid of the generating system will be stored in /etc/hostid on the
  initramfs.