@@ -250,18 +250,6 @@ class Core:
 			if os.path.isfile("/etc/modprobe.d/zfs.conf"):
 				tools.ecopy("/etc/modprobe.d/zfs.conf")
 
-			# Get the system's hostid now since it will default to 0
-			# within the initramfs environment
-
-			# source: https://bbs.archlinux.org/viewtopic.php?id=153868
-			hostid = check_output(["hostid"], universal_newlines=True).strip()
-
-			cmd = "printf $(echo -n " + hostid.upper() + " | " + \
-			"sed 's/\(..\)\(..\)\(..\)\(..\)/\\\\x\\4\\\\x\\3\\\\x\\2\\\\x\\1/') " + \
-			"> " + var.temp + "/etc/hostid"
-
-			call(cmd, shell=True)
-
 			# Copy zpool.cache into initramfs
 			if os.path.isfile("/etc/zfs/zpool.cache"):
 				tools.ewarn("Using your zpool.cache file ...")
